<resources>
    <string name="app_name">EZ Calculator</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
    <string name="result">Result: %s</string>
    <string name="select_your_operation">Select Your Operation</string>
    <string name="result_0_0">Result: 0.0</string>
    <string name="clear_input">Clear Input</string>
</resources>