<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_first_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/firstNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/firstNumber"
        app:srcCompat= "@drawable/ic_first"/>

    <EditText
        android:id="@+id/firstNumber"
        style="@style/Widget.EZCalculator.TextView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_number"
        android:inputType="numberDecimal"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@id/icon_first_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/icon_second_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/secondNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/secondNumber"
        app:srcCompat= "@drawable/ic_second"/>

    <EditText
        android:id="@+id/secondNumber"
        style="@style/Widget.EZCalculator.TextView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_second_number"
        android:inputType="numberDecimal"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@id/icon_second_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_first_number"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/icon_third_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/chooser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/chooser"
        android:paddingTop="16dp"
        app:srcCompat= "@drawable/ic_third"/>

    <TextView
        android:id="@+id/chooser"
        android:layout_width="200dp"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:text="@string/select_your_operation"
        android:layout_marginStart="28dp"
        android:paddingTop="16dp"
        app:layout_constraintStart_toEndOf="@id/icon_third_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_second_number"/>

    <Button
        android:id="@+id/additionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/firstNumber"
        app:layout_constraintTop_toBottomOf="@id/chooser"/>

    <Button
        android:id="@+id/subtractionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/firstNumber"
        app:layout_constraintTop_toBottomOf="@id/additionButton"/>

    <Button
        android:id="@+id/multiplicationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/firstNumber"
        app:layout_constraintTop_toBottomOf="@id/subtractionButton"/>

    <Button
        android:id="@+id/divisionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/firstNumber"
        app:layout_constraintTop_toBottomOf="@id/multiplicationButton"/>

    <ImageView
        android:id="@+id/resultPointer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/resultBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/resultBox"
        android:paddingTop="16dp"
        app:srcCompat= "@drawable/ic_result"/>

    <TextView
        android:id="@+id/resultBox"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="@string/result_0_0"
        android:text="@string/result"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divisionButton" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/resultBox"
        app:layout_constraintTop_toBottomOf="@id/resultBox"/>

</androidx.constraintlayout.widget.ConstraintLayout>